# tgBot

./: .gitignore  CMakeLists.txt  shedule.db
ext/json/: json.h
src/: Converter.h  Database.cpp  Database.h  Helpers.h  Weather.cpp  Weather.h  WeatherStorage.cpp  WeatherStorage.h  main.cpp
